syntax="proto3";

option go_package="./;pb";

package pb;

// 请求数据格式
message HelloRequest {
    string name = 1;
}

// 响应数据格式
message HelloReply {
    string message = 1;
}

// request
message StreamReqData {
    string data = 1;
 }
 
 // response
 message StreamResData {
    string data = 1;
 }
// rpc服务
service Greeter {
    rpc SayHello(HelloRequest) returns(HelloReply) {}
    rpc Streamserver(stream StreamReqData) returns(StreamResData) {}
    rpc StreamClient( StreamReqData) returns(stream StreamResData) {}
    rpc StreamAction(stream StreamReqData) returns(stream StreamResData) {}
}